--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   },
   "dependencies": {
     "@babel/register": "^7.7.7",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "camelcase": "^6.0.0",
     "chai": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
